@@ -235,38 +235,14 @@ if test x$FOUNDHOPENGL = xno; then ENABLE_OPENGL=no;fi;
 
 AC_MSG_RESULT($ENABLE_OPENGL)
 
+dnl Check if user wants the various gnome modules. Defaults to yes.
+AC_MSG_CHECKING([whether to build gnome bindings])
 
-dnl Check if user wants GtkSourceView extension. Make the default value for this
-dnl flag dependant on whether it is installed or not.
-ENABLE_SOURCEVIEW=yes;
-AC_MSG_CHECKING([if SourceView widget bindings can be built])
+AC_ARG_ENABLE(gnome,
+              [  --disable-gnome         do not generate binding for any gnome modules],
+              [ENABLE_GNOME=$enableval],[ENABLE_GNOME=yes])
 
-AC_ARG_ENABLE(sourceview,
-              [  --enable-sourceview     generate binding for GtkSourceView],
-              [FOUNDSOURCEVIEW=$enableval],[FOUNDSOURCEVIEW=yes])
-
-dnl Reset the flag if GtkSourceView is not installed
-$PKG_CONFIG --exists gtksourceview-1.0 || FOUNDSOURCEVIEW=no;
-if test x$FOUNDSOURCEVIEW = xno; then ENABLE_SOURCEVIEW=no;fi;
-
-AC_MSG_RESULT($ENABLE_SOURCEVIEW)
-
-
-dnl Check if user wants the libglade extension. Make the default value for this
-dnl flag dependant on whether it is installed or not.
-ENABLE_LIBGLADE=yes;
-AC_MSG_CHECKING([if libglade bindings can be built])
-
-AC_ARG_ENABLE(libglade,
-              [  --enable-libglade       generate binding for libglade],
-              [FOUNDLIBGLADE=$enableval],[FOUNDLIBGLADE=yes])
-
-dnl Reset the flag if libglade is not installed
-$PKG_CONFIG --exists libglade-2.0 || FOUNDLIBGLADE=no;
-if test x$FOUNDLIBGLADE = xno; then ENABLE_LIBGLADE=no;fi;
-
-AC_MSG_RESULT($ENABLE_LIBGLADE)
-
+AC_MSG_RESULT($ENABLE_GNOME)
 
 dnl Check for the GTK&Co libraries. Use the special PKG_CHECK_MODULES
 dnl macro from the pkg-config program.
@@ -274,10 +250,8 @@ PKG_CHECK_MODULES(GTK,[glib-2.0 >= 2.0.0 gdk-2.0 >= 2.0.0 gtk+-2.0 >= 2.0.0 gdk-
 if test x$ENABLE_OPENGL = xyes; then
   PKG_CHECK_MODULES(GTKGLEXT,[gtkglext-1.0 >= 0.7.1])
 fi
-if test x$ENABLE_SOURCEVIEW = xyes; then
+if test x$ENABLE_GNOME = xyes; then
   PKG_CHECK_MODULES(SOURCEVIEW,[gtksourceview-1.0 >= 0.6.0])
-fi
-if test x$ENABLE_LIBGLADE = xyes; then
   PKG_CHECK_MODULES(LIBGLADE,[libglade-2.0 >= 2.0.0])
 fi
 
@@ -544,10 +518,9 @@ dnl AC_SUBST(GTK_MAJOR_VERSION)
 dnl AC_SUBST(GTK_MINOR_VERSION)
 dnl AC_SUBST(GTK_MICRO_VERSION)
 AC_SUBST(ENABLE_OPENGL)
-AC_SUBST(ENABLE_SOURCEVIEW)
+AC_SUBST(ENABLE_GNOME)
 AC_SUBST(SOURCEVIEW_CFLAGS)
 AC_SUBST(SOURCEVIEW_LIBS)
-AC_SUBST(ENABLE_LIBGLADE)
 AC_SUBST(LIBGLADE_CFLAGS)
 AC_SUBST(LIBGLADE_LIBS)
 dnl Documentation
